<resources>
    <string name="app_name">Bible Notes</string>
    <string name="action_backward">Prev</string>
    <string name="action_Forward">Next</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="note_title">Titile 1</string>
    <string name="note_text">This is a text view note.</string>
    <string name="note_icon">Note Icon</string>
    <string name="action_search">Search</string>
    <string name="edit_preacher_name">Sermoner\'s Name</string>
    <string name="edit_text_title_holder">Bible Note Title</string>
    <string name="edit_text_note_label">Type Notes Here</string>
    <string name="save_note_button_text">Save</string>
    <string name="cancle_note_button_text">Cancle</string>
    <string name="sermoner_hint">Sermoner\'s name</string>
    <string name="title_hint">Note title</string>
    <string name="note_text_hint">Note text</string>
</resources>