<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="jem.temidayo.bible_note.ListNoteActivity">
    <item
        android:id="@+id/action_backward"
        android:icon="@drawable/ic_baseline_navigate_before_24"
        android:orderInCategory="100"
        android:title="@string/action_backward"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_forward"
        android:icon="@drawable/ic_baseline_navigate_next_24"
        android:orderInCategory="100"
        android:title="@string/action_Forward"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="ifRoom"
        />
</menu>